# forkhub

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  demo.md  env.example  forkhub.toml.example  program.md  pyproject.toml  spec.md
.beads/: SANDBOX_RECOVERY.md  config.yaml  dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: settings.json
.claude/harness/observability/: harness.env  install.sh  start.sh  status.sh  stop.sh  vector.toml
.claude/rules/: coverage.md
.github/workflows/: ci.yml  publish.yml
auto/: run.sh
docs/superpowers/plans/: 2026-03-19-pypi-packaging-ci-cd.md
docs/superpowers/specs/: 2026-03-19-pypi-packaging-ci-cd-design.md
scripts/: coverage_seed.py
specs/: backfill-ai-decision.md  backfill-deterministic-plan.md  uat-plan.md
src/forkhub/: __init__.py  config.py  database.py  interfaces.py  models.py  otel.py
src/forkhub/agent/: __init__.py  agents.py  hooks.py  prompts.py  runner.py  test_fixer.py  tools.py
src/forkhub/cli/: __init__.py  app.py  backfill_cmd.py  clusters_cmd.py  config_cmd.py  digest_cmd.py  forks_cmd.py  formatting.py  helpers.py  init_cmd.py  repos_cmd.py  sync_cmd.py  track_cmd.py
src/forkhub/embeddings/: __init__.py  local.py
src/forkhub/notifications/: __init__.py  console.py
src/forkhub/providers/: __init__.py  github.py
src/forkhub/services/: __init__.py  analyzer.py  backfill.py  cluster.py  digest.py  sync.py  tracker.py
src/forkhub/web/: explore.html
src/forkhub/web/static/css/: forkhub.css
src/forkhub/web/static/js/: constellation.js  explore.js
tests/: conftest.py  stubs.py  test_agent_hooks.py  test_agent_runner.py  test_agent_tools.py  test_backfill.py  test_backfill_coverage_gaps.py  test_backfill_test_fixer.py  test_cli.py  test_cli_backfill.py  test_cli_backfill_gaps.py  test_clusters.py  test_config.py  test_console_backend.py  test_coverage_gaps.py  test_coverage_gaps_2.py  test_database.py  test_digest.py  test_embeddings.py  test_forkhub_api.py  test_github_provider.py  test_integration.py  test_interfaces.py  test_models.py  test_packaging.py  test_smoke.py  test_sync.py  test_tracker.py
