[project]
name = "forkhub"
version = "0.1.0"
description = "Monitor GitHub fork constellations with AI-powered analysis"
readme = "README.md"
authors = [
    { name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "typer>=0.15,<1",
    "rich>=13.9,<14",
    "githubkit[rest]>=0.12,<1",
    "claude-agent-sdk>=0.1",
    "sentence-transformers>=3.3,<4",
    "sqlite-vec>=0.1.6,<1",
    "tomli>=2.2,<3;python_version<'3.12'",
]

[project.scripts]
forkhub = "forkhub.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "respx>=0.22,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sqlite_vec",
    "sentence_transformers",
]
ignore_missing_imports = true
