[project]
name = "forkhub"
dynamic = ["version"]
description = "Monitor GitHub fork constellations with AI-powered analysis"
readme = "README.md"
authors = [
    { name = "Joshua Oliphant", email = "joshua.oliphant@hey.com" }
]
license = "MIT"
requires-python = ">=3.12"
keywords = ["github", "forks", "ai", "monitoring", "claude", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "typer>=0.15,<1",
    "rich>=13.9,<14",
    "githubkit>=0.12,<1",
    "sentence-transformers>=3.3,<4",
    "sqlite-vec>=0.1.6,<1",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1"]

[project.scripts]
forkhub = "forkhub.cli.app:app"

[project.urls]
Homepage = "https://github.com/JoshuaOliphant/forkhub"
Repository = "https://github.com/JoshuaOliphant/forkhub"
Issues = "https://github.com/JoshuaOliphant/forkhub/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/forkhub/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "respx>=0.22,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "ty>=0.0.24",
    "claude-agent-sdk>=0.1",
]
otel = [
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/forkhub --cov-report=term-missing -m 'not integration and not slow'"
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
    "slow: marks tests that are slow (e.g., model downloads) (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = false
source = ["src/forkhub"]
# otel.py is the observability-harness telemetry module: its SDK-present and
# SDK-absent halves are mutually exclusive, so it cannot reach 100% in one run.
# It carries zero business logic (no-op-when-absent instrumentation only).
omit = ["src/forkhub/otel.py"]

[tool.coverage.report]
# 100% statement coverage is required. See CLAUDE.md (Coverage policy).
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "except ImportError:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sqlite_vec",
    "sentence_transformers",
]
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.12"
